# Supakell

./: .gitignore  LICENSE  README.md  stack.yaml  supakell.cabal
src/: Supakell.hs
src/Supakell/: Client.hs  Query.hs  Types.hs
