-- supakell.cabal
cabal-version:       >=1.10
name:                supakell
version:             0.1.0.0
synopsis:            Type-safe Supabase client DSL
description:         supakell: a small, typed Haskell DSL for Supabase REST.
license:             Apache-2.0
license-file:        LICENSE
author:              Johnny Pedara
category:            Database
build-type:          Simple

library
  exposed-modules:
      Supakell.Client
    -- , Supakell.Query
    -- , Supakell.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.9 && <5
    , aeson
    , text
    , mtl
    , bytestring
    , http-client
    , http-client-tls
    , containers

